<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firestore.FirestoreActivity">

    <Button
        android:id="@+id/adddatabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/setdatabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adddatabtn"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/deletedocbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setdatabtn"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/deletefieldbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletedocbtn"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/select_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletefieldbtn"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/select_where_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_where_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_data_btn"
        app:layout_constraintVertical_bias="0.184" />

    <Button
        android:id="@+id/firestorelistenerdatabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="데이터 조회(실시간 업데이트)"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_where_data_btn"
        app:layout_constraintVertical_bias="0.155" />

    <Button
        android:id="@+id/querydatabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="데이터 조회(실시간 업데이트-쿼리)"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firestorelistenerdatabtn"
        app:layout_constraintVertical_bias="0.155" />
</androidx.constraintlayout.widget.ConstraintLayout>